[package]
name = "ntdsextract2"
version = "0.13.0"
edition = "2021"
description = "Display contents of Active Directory database files (ntds.dit)"
repository = "https://github.com/janstarke/ntdsextract2"
authors = ["Jan Starke <jan.starke@t-systems.com>"]
license = "GPL-3.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "forensics", "security"]

[lib]
name="libntdsextract2"
path="src/lib.rs"

[[bin]]
name="ntdsextract2"
path="src/main.rs"

[dependencies]
ntds_object_derive = {path="./ntds_object_derive"}
log = {version = "0.4", features = [ "release_max_level_info" ]}
simplelog = "0.12"
anyhow = "1.0"
clap = "4"
clap-verbosity-flag = "2.0.0"
maplit = "1.0.2"
byteorder = "1.4.3"
hex = "0.4"
chrono = "0.4"
bitflags = {version="2", features=["serde"] }
strum = { version = "0.25", features = ["derive"] }
num-traits = "0.2.15"
num-derive = "0.4.0"
paste = "1.0"
hashbrown = "0.14" # used for faster hashes

bodyfile = "0.1.4"
libesedb = "0.1" # version 2 returns empty strings as name
#libesedb = {path="../rust-libesedb"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
termtree = "0.4"
term-table = "1.3.2"
termsize = "0.1"
regex = "1.6"

lazy_static = "1.4"
lazy-regex = "3"
getset = "0"

[dev-dependencies]
tempfile= "3"
assert_cmd = "2"
flate2 = "1"
serde_test = "1"