[package]
name = "ntdsextract2"
version = "1.0.0"
edition = "2021"
description = "Display contents of Active Directory database files (ntds.dit)"
repository = "https://github.com/janstarke/ntdsextract2"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "forensics", "security"]

[lib]
name="libntdsextract2"
path="src/lib.rs"

[[bin]]
name="ntdsextract2"
path="src/main.rs"

[dependencies]
log = {version = "0.4", features = [ "release_max_level_info" ]}
concat-idents = "1"
simplelog = "0.12"
anyhow = "1.0"
clap = "4"
clap-verbosity-flag = "2.0.0"
maplit = "1.0.2"
byteorder = "1.4.3"
hex = "0.4"
chrono = "0.4"
bitflags = {version="2", features=["serde"] }
strum = { version = "0.25", features = ["derive", "phf"] }
num-traits = "0.2.15"
num-derive = "0.4.0"
thiserror = "1"
paste = "1.0"
bodyfile = "0.1.4"
hashbrown = "0"
libesedb = "0.2.5"
#libesedb = {path="../rust-libesedb"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
term-table = "1.3.2"
termsize = "0.1"
termtree = "0"
regex = "1.6"

lazy_static = "1.4"
lazy-regex = "3"
getset = "0"

cap = "0.1.2"
indicatif = "0.17"
uuid = {version="1.6", features=["serde"]}

[dev-dependencies]
assert_cmd = "2"
serde_test = "1"

[build-dependencies]
lazy-regex = "3"
hex = "0"
byteorder = "1"
convert_case = "0"
